# Telephone-Booth-Operator-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  deny.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  publish.yml  release-please.yml
crates/tbo-audio/: Cargo.toml
crates/tbo-audio/src/: backend.rs  lib.rs  player.rs  state.rs
crates/tbo-auth/: Cargo.toml
crates/tbo-auth/src/: client.rs  endpoints.rs  error.rs  lib.rs  manager.rs  session.rs  store.rs  tokens.rs  transport.rs
crates/tbo-auth/tests/: device_flow.rs  session.rs
crates/tbo-booth-client/: Cargo.toml
crates/tbo-booth-client/src/: client.rs  error.rs  lib.rs  model.rs  telemetry.rs  tls.rs  transport.rs
crates/tbo-core/: Cargo.toml
crates/tbo-core/src/: config.rs  error.rs  lib.rs  secrets.rs
crates/tbo-core/src/domain/: admin.rs  ai.rs  booth.rs  common.rs  event.rs  message.rs  mod.rs  operator.rs  question.rs  session.rs  stats.rs  system.rs  token.rs  upload.rs  ws.rs
crates/tbo-core/tests/: secrets.rs  serde_roundtrip.rs
crates/tbo-metrics/: Cargo.toml
crates/tbo-metrics/src/: lib.rs  parse.rs  series.rs  snapshot.rs
crates/tbo-operator-client/: Cargo.toml
crates/tbo-operator-client/src/: client.rs  error.rs  lib.rs  sse.rs  token.rs  transport.rs  ws.rs
crates/tbo-operator-client/tests/: integration_http.rs
crates/tbo-tui/: Cargo.toml  build.rs
crates/tbo-tui/src/: app.rs  auth.rs  cli.rs  datacmd.rs  event.rs  logging.rs  main.rs  onboarding.rs  tui.rs
crates/tbo-tui/src/data/: debug.rs  events.rs  identity.rs  messages.rs  mod.rs  playback.rs  questions.rs  sessions.rs  stats.rs  status.rs  system.rs  system_health.rs  tokens.rs
crates/tbo-tui/src/ui/: icons.rs  mod.rs  modal.rs  screens.rs  theme.rs  toast.rs
docs/: authentik-setup.md
