[workspace]
resolver = "2"
members = [
    "crates/tbo-core",
    "crates/tbo-auth",
    "crates/tbo-operator-client",
    "crates/tbo-booth-client",
    "crates/tbo-metrics",
    "crates/tbo-audio",
    "crates/tbo-tui",
]

[workspace.package]
version = "0.2.3" # x-release-please-version
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["David Jensenius"]
repository = "https://github.com/djensenius/Telephone-Booth-Operator-cli"
homepage = "https://github.com/djensenius/Telephone-Booth-Operator-cli"
# Workspace crates are internal-only and use `path` deps. `publish = false`
# makes that intent explicit and lets cargo-deny's `allow-wildcard-paths`
# apply (it only skips wildcard checks for private/non-publishable crates).
publish = false

# Release profile shipped in the .deb. We let the Rust linker strip symbols
# during the build (which knows the target's stripping ABI), so cargo-deb does
# not need to invoke a host `strip` on a cross-compiled binary. See
# `publish.yml` which passes `cargo deb --no-strip`.
[profile.release]
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# These pedantic/nursery lints fight ergonomic code or duplicate intent that is
# intentionally explicit.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
match_same_arms = "allow"
too_many_lines = "allow"
too_long_first_doc_paragraph = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
redundant_clone = "allow"
assigning_clones = "allow"
use_self = "allow"
derivable_impls = "allow"
return_self_not_must_use = "allow"
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
# Workspace crates
tbo-core = { path = "crates/tbo-core" }
tbo-auth = { path = "crates/tbo-auth" }
tbo-operator-client = { path = "crates/tbo-operator-client" }
tbo-booth-client = { path = "crates/tbo-booth-client" }
tbo-metrics = { path = "crates/tbo-metrics" }
tbo-audio = { path = "crates/tbo-audio" }

# Serialization + errors (mirrors the booth repo's versions)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"] }
toml = "0.8"
directories = "5"

# TUI + async runtime + CLI (mirrors the booth repo's versions where shared)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
# Build-time generation of the man page and shell completions shipped in the
# .deb (see `crates/tbo-tui/build.rs`).
clap_complete = "4"
clap_mangen = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# HTTP client (rustls; mirrors the booth repo)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# TLS for booth LAN connections with self-signed-cert fingerprint pinning
# (ring provider, matching reqwest's rustls backend — avoids pulling aws-lc-rs)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# Booth telemetry WebSocket. tokio-tungstenite is handshake-only (no built-in
# TLS feature, which would pull tokio-rustls's default aws-lc-rs provider); TLS
# is supplied directly via tokio-rustls with the ring provider to match reqwest.
tokio-tungstenite = { version = "0.26", default-features = false, features = ["handshake"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = "1"

# Hashing for the audio-upload SAS flow (SHA-256 of the FLAC bytes)
sha2 = "0.10"
hex = "0.4"

# In-terminal audio playback. FLAC only (booth recordings/prompts are FLAC),
# decoded by Symphonia (rodio's default backend); default features are off to
# avoid pulling decoders for formats we never play.
rodio = { version = "0.22", default-features = false, features = ["flac", "playback"] }

# Dev-only: HTTP mock server for end-to-end client integration tests that
# exercise the real reqwest transport (URL joining, bearer header, query
# encoding, status mapping, JSON/SSE decoding) over a real socket.
wiremock = "0.6"
