[package]
name = "tbo-audio"
description = "In-terminal FLAC playback engine (rodio + symphonia) for tb-operator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rodio = { workspace = true }
