[package]
name = "tbo-booth-client"
description = "Booth debug-server client (HTTP + telemetry WebSocket + TLS pinning) for tb-operator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
