[package]
name = "tbo-booth-client"
description = "Booth debug-server client (HTTP + telemetry WebSocket + TLS pinning) for tb-operator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tbo-core = { workspace = true }
tbo-metrics = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
