[package]
name = "tbo-core"
description = "Core domain types, configuration, and errors for the tb-operator console."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
