[package]
name = "tbo-operator-client"
description = "Operator API client (REST + bearer SSE) for tb-operator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tbo-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
