[package]
name = "tbo-tui"
description = "Terminal operator console (TUI) for the Telephone-Booth installation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
default-run = "tb-operator"

[[bin]]
name = "tb-operator"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[dependencies]
tbo-core = { workspace = true }
tbo-auth = { workspace = true }
tbo-operator-client = { workspace = true }
tbo-booth-client = { workspace = true }
tbo-metrics = { workspace = true }
tbo-audio = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }

[package.metadata.deb]
name = "telephone-booth-operator-cli"
maintainer = "David Jensenius"
copyright = "2024-2026, David Jensenius"
license-file = ["../../LICENSE", "0"]
extended-description = "Terminal UI operator console for the Telephone Booth art installation. Manages messages, questions, sessions, and live system health, and connects to the booth's on-device debug server."
section = "utils"
priority = "optional"
depends = "libasound2"
assets = [
    ["target/release/tb-operator", "/usr/bin/tb-operator", "755"],
    ["../../README.md", "/usr/share/doc/telephone-booth-operator-cli/README.md", "644"],
    # Generated by build.rs into the build-script OUT_DIR. cargo-deb rewrites the
    # `target/release/` prefix to `target/<triple>/release/` for cross builds,
    # and appends each glob-matched file's basename to the destination directory.
    ["target/release/build/tbo-tui-*/out/tb-operator.1", "/usr/share/man/man1/", "644"],
    ["target/release/build/tbo-tui-*/out/tb-operator", "/usr/share/bash-completion/completions/", "644"],
    ["target/release/build/tbo-tui-*/out/_tb-operator", "/usr/share/zsh/vendor-completions/", "644"],
    ["target/release/build/tbo-tui-*/out/tb-operator.fish", "/usr/share/fish/vendor_completions.d/", "644"],
]
